--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
     "body-parser": "^1.19.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "external-ip": "^2.3.1",
     "handlebars": "^4.7.7",
@@ -13,8 +14,13 @@
   },
   "devDependencies": {
     "axios": "^0.21.1",
+    "chai": "^4.3.4",
     "ejs": "^3.1.6",
     "express-handlebars": "^5.3.0",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "mocha": "^8.3.2"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
